--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-intersection-observer": "^9.13.1",
     "react-vertical-timeline-component": "^3.6.0",
     "resend": "^0.16.0",
+    "sharp": "^0.33.5",
     "tailwindcss": "3.4.10",
     "typescript": "5.5.4"
   },
